# ferroc

./: CMakeLists.txt
include/: lexer.h  parser.h
src/: lexer.c  main.c  parser.c
testing/: main.fr
